test/files/neg/t7294.check
t7294.scala:4: error: pattern type is incompatible with expected type;
 found   : Seq[A]
 required: (Int, Int)
  (1, 2) match { case Seq() => 0; case _ => 1 }
                         ^
one error found
